test/pos/ebind-04.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k2 ((lq_karg$v##k2 Int)))
(wf $k1 ((lq_karg$v##k1 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(x Int)) (=> ($k1 _VV##1) (= _VV##1 x))))
(constraint (forall ((_VV##2 Int)(x Int)) (=> (= _VV##2 (+ x 1)) ($k2 _VV##2))))
(constraint (forall ((_VV##3 Int)) (=> (= _VV##3 3) ($k1 _VV##3))))
(constraint (forall ((_VV##4 Int)) (=> ($k2 _VV##4) (= _VV##4 4))))

