test/neg/ebind-elim2.msmt_
; Sorts
(declare-sort Tuple 0)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k_##1 ((lq_karg$VV##1##k_##1 Tuple)(lq_karg$a##k_##1 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(c Int)(a Int)) (=> (= _VV##1 c) ($k_##1 _VV##1 a))))
(constraint (forall ((_VV##2 Int)(c Int)(a Int)) (=> ($k_##1 _VV##2 a) (= _VV##2 c))))
(constraint (forall ((_VV##3 Int)) (=> ($k_##1 _VV##3 a) (= _VV##3 0))))

